# Project_1_CalcPos

./: CMakeLists.txt  FFX app algorith  FFX_diagramm.drawio  Module diagramm FFX app.drawio  README.md  calculation.cpp  calculation.h  clientopc.cpp  clientopc.h  common.h  connection.cpp  connection.h  control.cpp  control.h  database.cpp  database.h  diameterrolls.cpp  diameterrolls.h  files.cpp  files.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plcdata.cpp  plcdata.h  process.cpp  process.h  productsize.cpp  productsize.h  resources.qrc  standtablemodel.cpp  standtablemodel.h  testmodules.cpp  testmodules.h
